--- a/cog.yaml
+++ b/cog.yaml
@@ -18,8 +18,8 @@ build:
 
   # a list of packages in the format <package-name>==<version>
   python_packages:
-    - torch
-    - torchvision
+    - torch>=2.4
+    - torchvision>=0.19
     - diffusers==0.32.2
     - easydict==1.13
     - einops==0.8.1
@@ -37,7 +37,7 @@ build:
   # commands run after the environment is setup
   run:
     - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.8.2/pget_linux_x86_64" && chmod +x /usr/local/bin/pget
-    - pip install --upgrade torch numpy torchvision
+    - pip install --upgrade torch numpy torchvision --index-url https://download.pytorch.org/whl/cu124
 
 # predict.py defines how predictions are run on your model
 predict: "predict.py:Predictor"
